# wasm-http-tools

./: .gitignore  .gitmodules  404.html  Cargo.toml  README.md  examples.html  index.html  introduction.html  print.html  run.sh  searchindex.js  searchindex.json  type-system.html
.github/workflows/: docs.yml
crates/http-bindgen/: Cargo.toml  README.md
crates/http-bindgen/src/: lib.rs
crates/openapi-bindgen/: Cargo.toml  LICENSE  README.md
crates/openapi-bindgen/src/: lib.rs
crates/wasi-async-runtime/: Cargo.toml  README.md
crates/wasi-async-runtime/src/: block_on.rs  lib.rs  polling.rs  reactor.rs
crates/wasi-http-attributes/: Cargo.toml  README.md
crates/wasi-http-attributes/src/: lib.rs
crates/wasi-http-client/: Cargo.toml  README.md
crates/wasi-http-client/examples/: concurrent.rs  main.rs  manual.rs  pretty.rs
crates/wasi-http-client/src/: bindings.rs  lib.rs  polling.rs  request.rs  response.rs
crates/wasi-http-client/src/client/: mod.rs  response.rs
crates/wasi-http-client/src/http_types/: error.rs  fields.rs  method.rs  mod.rs  request.rs  response.rs  status_code.rs
crates/wasi-http-client/src/runtime/: mod.rs  polling.rs  reactor.rs
crates/wasm-http-tools/: Cargo.toml  README.md
crates/wasm-http-tools/src/: lib.rs
crates/wit-bindgen-http/: Cargo.toml  README.md
docs/: book.toml
docs/src/: SUMMARY.md  examples.md  type-system.md
docs/src/examples/: pet-store.md
docs/src/examples/pet-store/: openapi.md  wit.md
examples/: pet-store.html
examples/pet-store/: openapi.html  wit.html
fixtures/: pet-store.json
resources/: wasi_snapshot_preview1.proxy.wasm
