[package]
name = "openapi-bindgen"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/wasm-http-tools"
documentation = "https://docs.rs/wasm-http-tools"
description = "Bidirectional bindings between OpenAPI (Swagger) and WIT"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>"
]

[features]

[dependencies]
openapiv3 = "2.0.0"
serde = "1.0.195"
serde_json = "1.0.111"

[dev-dependencies]
