[package]
name = "wasi-async-runtime"
version = "0.1.2"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/yoshuawuyts/wasm-http-tools"
documentation = "https://docs.rs/wasi-async-runtime"
description = "WASI-based async runtime library for Rust"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]

[features]
default = ["std"]
std = []

[dependencies]
wasi = { version = "0.12.1", default-features = false }
slab = { version = "0.4.9", default-features = false }
hashbrown = "0.14.3"

[dev-dependencies]
futures-concurrency = "7.4.0"
