[package]
name = "wasi-http-attributes"
description = "Proc Macro attributes for the WASI HTTP Proxy World."
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-cli/paw"
homepage = "https://github.com/rust-cli/paw"
documentation = "https://docs.rs/wasi-http-attributes"
authors = ["Yosh Wuyts <rust@yosh.is>"]
categories = ["command-line-interface", "command-line-utilities", "parsing"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.2", features = ["nightly"] }
quote = "1.0.2"
