[package]
name = "wasm-http-tools"
version = "0.0.0"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/yoshuawuyts/wasm-http-tools"
documentation = "https://docs.rs/wasm-http-tools"
description = "Bidirectional bindings generator between OpenAPI (Swagger) and WIT"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]

[features]

[dependencies]

[dev-dependencies]
