[package]
name = "wit-bindgen-http"
version = "0.0.0"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/yoshuawuyts/wasm-http-tools"
documentation = "https://docs.rs/wit-bindgen-http"
description = "Automatically generate HTTP routing layers for WIT definitions"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]

[features]

[dependencies]

[dev-dependencies]
